src-tauri/check_err.txt
    Checking windows-sys v0.59.0
    Checking reqwest v0.12.28
    Checking window-vibrancy v0.6.0
    Checking winreg v0.55.0
    Checking tauri v2.11.3
    Checking tauri-plugin-fs v2.5.1
    Checking tauri-plugin-notification v2.3.3
    Checking tauri-plugin-process v2.3.1
    Checking tauri-plugin-os v2.3.2
    Checking tauri-plugin-shell v2.3.5
    Checking tauri-plugin-single-instance v2.4.2
    Checking tauri-plugin-dialog v2.7.1
    Checking zimufan v1.0.0 (C:\code\ai-subtrans\src-tauri)
error[E0425]: cannot find function `load` in module `config`
   --> src\ipc.rs:284:45
    |
284 |     let secret_from_keyring = match config::load(&provider, "secret") {
    |                                             ^^^^ not found in `config`

error[E0425]: cannot find function `save` in module `config`
   --> src\ipc.rs:353:24
    |
353 |     ipc_result(config::save(&provider, &key, &value))
    |                        ^^^^ not found in `config`

error[E0425]: cannot find function `load` in module `config`
   --> src\ipc.rs:359:32
    |
359 |     let result = match config::load(&provider, &key) {
    |                                ^^^^ not found in `config`

error[E0425]: cannot find function `delete` in module `config`
   --> src\ipc.rs:370:24
    |
370 |     ipc_result(config::delete(&provider, &key))
    |                        ^^^^^^ not found in `config`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src\ipc.rs:273:7
    |
268 |   ) -> IpcResult<translate::TranslateResult> {
    |  ____________________________________________-
269 | |     let prov = TranslateProvider::from_str(&provider).ok_or_else(|| {
270 | |         AppError::Unknown {
271 | |             detail: format!("未知翻译引擎: {}", provider),
272 | |         }
273 | |     })?;
    | |       ^ cannot use the `?` operator in an async function that returns `IpcResult<TranslateResult>`
...   |
319 | |     ipc_result(Ok(result))
320 | | }
    | |_- this function should return `Result` or `Option` to accept `?`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src\ipc.rs:277:44
    |
268 |   ) -> IpcResult<translate::TranslateResult> {
    |  ____________________________________________-
269 | |     let prov = TranslateProvider::from_str(&provider).ok_or_else(|| {
270 | |         AppError::Unknown {
271 | |             detail: format!("未知翻译引擎: {}", provider),
...   |
277 | |     let app_id = db.get_config(&config_key)?;
    | |                                            ^ cannot use the `?` operator in an async function that returns `IpcResult<TranslateResult>`
...   |
319 | |     ipc_result(Ok(result))
320 | | }
    | |_- this function should return `Result` or `Option` to accept `?`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src\ipc.rs:279:52
    |
268 |   ) -> IpcResult<translate::TranslateResult> {
    |  ____________________________________________-
269 | |     let prov = TranslateProvider::from_str(&provider).ok_or_else(|| {
270 | |         AppError::Unknown {
271 | |             detail: format!("未知翻译引擎: {}", provider),
...   |
279 | |     let secret_key = db.get_config(&secret_key_ref)?;
    | |                                                    ^ cannot use the `?` operator in an async function that returns `IpcResult<TranslateResult>`
...   |
319 | |     ipc_result(Ok(result))
320 | | }
    | |_- this function should return `Result` or `Option` to accept `?`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src\ipc.rs:281:44
    |
268 |   ) -> IpcResult<translate::TranslateResult> {
    |  ____________________________________________-
269 | |     let prov = TranslateProvider::from_str(&provider).ok_or_else(|| {
270 | |         AppError::Unknown {
271 | |             detail: format!("未知翻译引擎: {}", provider),
...   |
281 | |     let region = db.get_config(&region_ref)?;
    | |                                            ^ cannot use the `?` operator in an async function that returns `IpcResult<TranslateResult>`
...   |
319 | |     ipc_result(Ok(result))
320 | | }
    | |_- this function should return `Result` or `Option` to accept `?`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src\ipc.rs:297:72
    |
268 |   ) -> IpcResult<translate::TranslateResult> {
    |  ____________________________________________-
269 | |     let prov = TranslateProvider::from_str(&provider).ok_or_else(|| {
270 | |         AppError::Unknown {
271 | |             detail: format!("未知翻译引擎: {}", provider),
...   |
297 | |     let prov_instance = translate::create_provider(&prov, &credentials)?;
    | |                                                                        ^ cannot use the `?` operator in an async function that returns `IpcResult<TranslateResult>`
...   |
319 | |     ipc_result(Ok(result))
320 | | }
    | |_- this function should return `Result` or `Option` to accept `?`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src\ipc.rs:302:15
    |
268 |   ) -> IpcResult<translate::TranslateResult> {
    |  ____________________________________________-
269 | |     let prov = TranslateProvider::from_str(&provider).ok_or_else(|| {
270 | |         AppError::Unknown {
271 | |             detail: format!("未知翻译引擎: {}", provider),
...   |
302 | |         .await?;
    | |               ^ cannot use the `?` operator in an async function that returns `IpcResult<TranslateResult>`
...   |
319 | |     ipc_result(Ok(result))
320 | | }
    | |_- this function should return `Result` or `Option` to accept `?`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src\ipc.rs:334:7
    |
329 |   ) -> IpcResult<()> {
    |  ____________________-
330 | |     let prov = TranslateProvider::from_str(&provider).ok_or_else(|| {
331 | |         AppError::Unknown {
332 | |             detail: format!("未知翻译引擎: {}", provider),
333 | |         }
334 | |     })?;
    | |       ^ cannot use the `?` operator in an async function that returns `IpcResult<()>`
...   |
343 | |     ipc_result(prov_instance.test_connection().await)
344 | | }
    | |_- this function should return `Result` or `Option` to accept `?`

error[E0277]: the `?` operator can only be used in an async function that returns `Result` or `Option` (or another type that implements `FromResidual`)
   --> src\ipc.rs:342:72
    |
329 |   ) -> IpcResult<()> {
    |  ____________________-
330 | |     let prov = TranslateProvider::from_str(&provider).ok_or_else(|| {
331 | |         AppError::Unknown {
332 | |             detail: format!("未知翻译引擎: {}", provider),
...   |
342 | |     let prov_instance = translate::create_provider(&prov, &credentials)?;
    | |                                                                        ^ cannot use the `?` operator in an async function that returns `IpcResult<()>`
343 | |     ipc_result(prov_instance.test_connection().await)
344 | | }
    | |_- this function should return `Result` or `Option` to accept `?`

error[E0277]: async commands that contain references as inputs must return a `Result`
   --> src\ipc.rs:268:6
    |
268 | ) -> IpcResult<translate::TranslateResult> {
    |      ^^^^^^^^^ the trait `AsyncCommandMustReturnResult` is not implemented for `IpcResult<TranslateResult>`
    |
    = help: the trait `AsyncCommandMustReturnResult` is implemented for `Result<A, B>`
    = note: required for the cast from `&IpcResult<TranslateResult>` to `&dyn AsyncCommandMustReturnResult`

error[E0308]: mismatched types
   --> src\ipc.rs:424:73
    |
424 |     ipc_result(crate::search::download_subtitle(&subtitle_id, &api_key, &output_path))
    |                --------------------------------                         ^^^^^^^^^^^^ expected `&Path`, found `&String`
    |                |
    |                arguments to this function are incorrect
    |
    = note: expected reference `&std::path::Path`
               found reference `&std::string::String`
note: function defined here
   --> src\search.rs:192:8
    |
192 | pub fn download_subtitle(
    |        ^^^^^^^^^^^^^^^^^
...
195 |     output_path: &std::path::Path,
    |     -----------------------------

Some errors have detailed explanations: E0277, E0308, E0425.
For more information about an error, try `rustc --explain E0277`.
error: could not compile `zimufan` (lib) due to 14 previous errors
